Thu May  5 08:26:59 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QosProfile/descriptors/run_test.pl:
          Only asign status when things go wrong.

Wed May  4 11:37:31 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/Utils.cpp:
          Improved handling of Qos profile string. Throwing a ::CORBA::INTERAL
          when the Qos profile string does not meet the requirements
          (i.e. containing a '#'-sign).

        * connectors/dds4ccm/tests/QosProfile/descriptors/PlanNoHash.cdp:
        * connectors/dds4ccm/tests/QosProfile/descriptors/PlanWrongNames.cdp:
        * connectors/dds4ccm/tests/QosProfile/descriptors/run_test.pl:
          Extended this test with a malformed Qos profile string.

        * connectors/dds4ccm/tests/QosProfile/descriptors/Plan.cdp:
          Removed this file.

Thu Apr 28 14:00:42 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * bin/generate_component_mpc.pl:
          Added a -I as commandline parameter. This will set an
          include directory for all projects (cpp and idl).

        * connectors/dds4ccm/impl/DataReaderHandler_T.h:
        * connectors/dds4ccm/impl/DataReaderHandler_T.cpp:
          Adding and removing reference manually. This'll prevent removing the
          listener while the reactor still has messages to handle.

Tue Apr 26 13:57:23 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * examples/Display/descriptors/run_test_without_ns.pl:
        * examples/Display/descriptors/NodeManagerMap.cdd:
        * examples/Display/descriptors/run_NodeDaemons.pl:
        Deleted unused files.

        * examples/Display/README.html:
        * examples/Display/RateGen/RateGen_exec.cpp: