@@ -1,3 +1,11 @@
+Sun May  8 19:05:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/Updater_T.cpp:
+          Give local variable unique name
+
+        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Receiver/Throughput_Receiver.cpp:
+          Fixed possible memory leaks
+
 Thu May  5 08:26:59 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/QosProfile/descriptors/run_test.pl:
